--- a/templates/about.html
+++ b/templates/about.html
@@ -193,7 +193,7 @@ h1, h2, h3, h5 {
 
 <!-- Team Section --> 
 <section class="team py-5">
-
+<h2 class="fw-bold mb-4 text-center">FOUNDERS</h2>
 <div class="d-flex justify-content-center gap-5 text-center flex-wrap">
     <div>
         <img src="{% static 'images/emmy.jpg' %}" class="rounded-circle mb-3" width="150" height="150" alt="Emmy">
