--- a/templates/about.html
+++ b/templates/about.html
@@ -156,7 +156,7 @@ h1, h2, h3, h5 {
 </section>
 
 <!-- Features Section -->
-<section class="features py-5 bg-light">
+<section class="features py-5 ">
     <div class="container text-center">
         <h2 class="fw-bold mb-4">Why Choose WAAP FOLIO?</h2>
         <div class="row">
@@ -191,7 +191,7 @@ h1, h2, h3, h5 {
     </div>
 </section>
 
-<!-- Team Section --> 
+{% comment %} <!-- Team Section --> 
 <section class="team py-5">
 <h2 class="fw-bold mb-4 text-center">FOUNDERS</h2>
 <div class="d-flex justify-content-center gap-5 text-center flex-wrap">
@@ -200,27 +200,23 @@ h1, h2, h3, h5 {
         <h5 class="fw-bold"> Big Emmy</h5>
         <p class="text-muted">Founder & Lead CEO</p>
     </div>
-    <div>
-        <img src="{% static 'images/victory.jpg' %}" class="rounded-circle mb-3" width="150" height="150" alt="Victory">
-        <h5 class="fw-bold"> Dave Victory</h5>
-        <p class="text-muted">Graphics & CO-CEO </p>
-    </div>
+
 </div>
 
 
-</section>
+</section> {% endcomment %}
 
 <!-- Stats Section -->
-<section class="stats py-5 bg-light text-center">
+<section class="stats py-5  text-center">
     <div class="container">
         <h2 class="fw-bold mb-4">WAAP FOLIO in Numbers</h2>
         <div class="row row-cols-1 row-cols-md-4 g-4">
             <div class="col">
-                <h3 class="fw-bold stat-num" data-target="150">0</h3>
+                <h3 class="fw-bold stat-num" data-target="3500">0</h3>
                 <p>Stores Created</p>
             </div>
             <div class="col">
-                <h3 class="fw-bold stat-num" data-target="1200">0</h3>
+                <h3 class="fw-bold stat-num" data-target="120000">0</h3>
                 <p>Products Listed</p>
             </div>
             <div class="col">
