--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -62,7 +62,7 @@
       <div class="p-4 bg-light rounded shadow-sm border product-details-card">
 
         <h4 class="text-success fw-bold">
-          {% if product.currency == "NGN" %}₦{% elif product.currency == "USD" %}${% elif product.currency == "EUR" %}€{% elif product.currency == "GBP" %}£{% elif product.currency == "GHS" %}₵{% endif %}
+          {% if product.currency == "NGN" %}₦{% elif product.currency == "USD" %}${% elif product.currency == "EUR" %}€{% elif product.currency == "GBP" %}£{% elif product.currency == "GHS" %}₵{% elif product.currency == "MWK" %}MK{% endif %}
           {{ product.price|intcomma }}
         </h4>
 
