--- a/templates/store_base.html
+++ b/templates/store_base.html
@@ -753,7 +753,7 @@ body.dark .waap-footer small {
     </div>
 
     <div class="text-center small text-light opacity-75">
-      © <span id="year"></span> {{ store.brand_name }}.
+      © <span id="year"></span> {{ store.brand_name }}. Powered By WaapFolio.
     </div>
 
   </div>
