--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -61,10 +61,13 @@
     <div class="col-lg-6">
       <div class="p-4 bg-light rounded shadow-sm border product-details-card">
 
+      {% if product.price %}
         <h4 class="text-success fw-bold">
           {% if product.currency == "NGN" %}₦{% elif product.currency == "USD" %}${% elif product.currency == "EUR" %}€{% elif product.currency == "GBP" %}£{% elif product.currency == "GHS" %}₵{% elif product.currency == "MWK" %}MK{% endif %}
           {{ product.price|intcomma }}
         </h4>
+      {% endif %}
+
 
         <p class="text-muted">
           Posted on: {{ product.created_at|date:"F j, Y" }} at {{ product.created_at|time:"H:i" }}
