--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -5,10 +5,9 @@
 {% block body %}
 
 <div class="container py-5">
-
-  {% comment %} <a href="{% url 'view_store' product.store.slug %}" class="text-decoration-none text-dark mb-3 d-inline-block">
+ <a href="{% url store.get_absolute_url  %}" class="text-decoration-none text-dark mb-3 d-inline-block">
     <i class="bi bi-arrow-left"></i> Back to Store
-  </a> {% endcomment %}
+  </a> 
 
   <h3 class="text-center mb-4 fw-bold">{{ product.name }}</h3>
 
