--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -5,7 +5,7 @@
 {% block body %}
 
 <div class="container py-5">
- <a href="{% url store.get_absolute_url  %}" class="text-decoration-none text-dark mb-3 d-inline-block">
+<a href="{{ store.get_absolute_url }}" class="text-decoration-none text-dark mb-3 d-inline-block">
     <i class="bi bi-arrow-left"></i> Back to Store
   </a> 
 
