--- a/templates/base.html
+++ b/templates/base.html
@@ -838,7 +838,7 @@
             </div>
         </div>
     </footer>
-
+{% comment %} 
     <!-- Mobile Bottom Nav -->
     <nav class="mobile-bottom-nav">
         <div class="mobile-bottom-nav-inner">
@@ -872,7 +872,7 @@
             </a>
             {% endif %}
         </div>
-    </nav>
+    </nav> {% endcomment %}
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
