--- a/templates/base.html
+++ b/templates/base.html
@@ -745,7 +745,7 @@
         </div>
     </nav>
 
-    {% comment %} <!-- Mobile Menu -->
+     <!-- Mobile Menu -->
     <div class="mobile-menu" id="mobileMenu">
         <ul>
             <li><a href="/"><i class="bi bi-house me-2"></i> Home</a></li>
@@ -770,7 +770,7 @@
             <a href="/signup" class="btn-waap btn-waap-primary w-100 justify-content-center">Get Started</a>
             {% endif %}
         </div>
-    </div> {% endcomment %}
+    </div>
 
     <!-- Main Content -->
     <main class="main-content">
